--- a/APIDocumentation/mdel-documentation-fr.html
+++ b/APIDocumentation/mdel-documentation-fr.html
@@ -93,7 +93,7 @@
                                 <a href="#a2">Entreprise</a>
                                 <ul>
                                     <li><a href="#a2.1">Paramètres</a></li>
-                                    <li><a href="#a2.2">Format du résultat</a></li>
+                                    <li><a href="#a2.2">Contenu du résultat</a></li>
                                     <li><a href="#a2.3">Exemple de résultat</a></li>
                                     <li><a href="#a2.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -102,7 +102,7 @@
                                 <a href="#a3">Pays</a>
                                 <ul>
                                     <li><a href="#a3.1">Paramètres</a></li>
-                                    <li><a href="#a3.2">Format du résultat</a></li>
+                                    <li><a href="#a3.2">Contenu du résultat</a></li>
                                     <li><a href="#a3.3">Exemple de résultat</a></li>
                                     <li><a href="#a3.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -111,7 +111,7 @@
                                 <a href="#a4">Établissement</a>
                                 <ul>
                                     <li><a href="#a4.1">Paramètres</a></li>
-                                    <li><a href="#a4.2">Format du résultat</a></li>
+                                    <li><a href="#a4.2">Contenu du résultat</a></li>
                                     <li><a href="#a4.3">Exemple de résultat</a></li>
                                     <li><a href="#a4.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -120,7 +120,7 @@
                                 <a href="#a5">Province</a>
                                 <ul>
                                     <li><a href="#a5.1">Paramètres</a></li>
-                                    <li><a href="#a5.2">Format du résultat</a></li>
+                                    <li><a href="#a5.2">Contenu du résultat</a></li>
                                     <li><a href="#a5.3">Exemple de résultat</a></li>
                                     <li><a href="#a5.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -172,12 +172,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p>La liste des entreprises peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -186,7 +185,7 @@
                             </ul>
                         </section>
                         <section>
-                            <h3 id="a2.2">Format du résultat</h3>
+                            <h3 id="a2.2">Contenu du résultat</h3>
                             <p>Le&nbsp;<strong>résultat</strong>&nbsp;contient un ou plusieurs objets.</p>
                             <p>Chaque objet&nbsp;<strong>entreprise</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
@@ -325,12 +324,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p>La liste des pays peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -341,7 +339,7 @@
                         </section>
 
                         <section>
-                            <h3 id="a3.2">Format du résultat</h3>
+                            <h3 id="a3.2">Contenu du résultat</h3>
                             <p>Le&nbsp;<strong>résultat</strong>&nbsp;contient un ou plusieurs objets.</p>
                             <p>Chaque objet&nbsp;<strong>pays</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
@@ -439,12 +437,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>                                
                             </table>
                             <p>La liste des établissements peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -454,7 +451,7 @@
                             </ul>
                         </section>
                         <section>
-                            <h3 id="a4.2">Format du résultat</h3>
+                            <h3 id="a4.2">Contenu du résultat</h3>
                             <p>Le&nbsp;<strong>résultat</strong>&nbsp;contient un ou plusieurs objets.</p>
                             <p>Chaque objet&nbsp;<strong>établissement</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
@@ -656,12 +653,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p>La liste des provinces peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -671,7 +667,7 @@
                             </ul>
                         </section>
                         <section>
-                            <h3 id="a5.2">Format du résultat</h3>
+                            <h3 id="a5.2">Contenu du résultat</h3>
                             <p>Le&nbsp;<strong>résultat</strong>&nbsp;contient un ou plusieurs objets.</p>
 
                             <p>Chaque objet&nbsp;<strong>province</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
