--- a/APIDocumentation/summary-report-documentation-fr.html
+++ b/APIDocumentation/summary-report-documentation-fr.html
@@ -92,7 +92,7 @@
                                 <a href="#a2">Sommaire des motifs de décision</a>
                                 <ul>
                                     <li><a href="#a2.1">Paramètres</a></li>
-                                    <li><a href="#a2.2">Format du résultat</a></li>
+                                    <li><a href="#a2.2">Contenu du résultat</a></li>
                                     <li><a href="#a2.3">Exemple de résultat</a></li>
                                     <li><a href="#a2.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -101,7 +101,7 @@
                                 <a href="#a3">Sommaire des décisions réglementaires</a>
                                 <ul>
                                     <li><a href="#a3.1">Paramètres</a></li>
-                                    <li><a href="#a3.2">Format du résultat</a></li>
+                                    <li><a href="#a3.2">Contenu du résultat</a></li>
                                     <li><a href="#a3.3">Exemple de résultat</a></li>
                                     <li><a href="#a3.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -110,7 +110,7 @@
                                 <a href="#a4">Examen de l'innocuité</a>
                                 <ul>
                                     <li><a href="#a4.1">Paramètres</a></li>
-                                    <li><a href="#a4.2">Format du résultat</a></li>
+                                    <li><a href="#a4.2">Contenu du résultat</a></li>
                                     <li><a href="#a4.3">Exemple de résultat</a></li>
                                     <li><a href="#a4.4">Exemple de jQuery</a></li>
                                 </ul>
@@ -172,12 +172,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p> La liste des sommaires des motifs de décision peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -187,7 +186,7 @@
                             </ul>
                         </section>                        
                         <section>
-                            <h3 id="a2.2">Format du résultat</h3>
+                            <h3 id="a2.2">Contenu du résultat</h3>
                             <p>Le <strong>résultat</strong> contient un ou plusieurs objets.</p>
                             <p>Chaque objet&nbsp;<strong>sommaire des motifs de décision</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
@@ -458,12 +457,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p> La liste des sommaires des décisions réglementaires peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -473,7 +471,7 @@
                             </ul>
                         </section> 
                         <section>
-                            <h3 id="a3.2">Format du résultat</h3>
+                            <h3 id="a3.2">Contenu du résultat</h3>
                             <p>Le <strong>résultat</strong> contient un ou plusieurs objets.</p>
                             <p>Chaque objet&nbsp;<strong>sommaire des décisions réglementaires</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
@@ -671,12 +669,11 @@
                                     <td>
                                         <ul class="list-unstyled mrgn-lft-0 nowrap">
                                             <li><code>json</code>&nbsp;- JSON</li>
-                                            <li><code>xml</code>&nbsp;- XML</li>
-                                            <li><code>csv</code>&nbsp;- CSV</li>
+                                            <li><code>xml</code>&nbsp;- XML</li>                                            
                                         </ul>
                                     </td>
                                     <td><strong>Non</strong>, mais JSON est le format par défaut s'il n'est pas spécifié.</td>
-                                    <td>Détermine si le résultat est en format JSON, XML ou CSV.</td>
+                                    <td>Détermine si le résultat est en format JSON ou XML.</td>
                                 </tr>
                             </table>
                             <p>La liste des Summary safety reviews peut être accédée aux adresses URI suivantes&nbsp;:</p>
@@ -686,7 +683,7 @@
                             </ul>
                         </section>                        
                         <section>
-                            <h3 id="a4.2">Format du résultat</h3>
+                            <h3 id="a4.2">Contenu du résultat</h3>
                             <p>Le <strong>résultat</strong> contient un ou plusieurs objets.</p>
                             <p>Chaque objet &nbsp;<strong>summary safety reviews</strong>&nbsp;contient les valeurs suivantes&nbsp;:</p>
                             <table>
